Another changes saved

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>My Application</title>
   </head>
   <body>
-    This is my Application!
+    This is my Application!git 
   </body>
 </html>
