addin dir1 and index file change

--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>My Application</title>
   </head>
   <body>
-    This is my Application!git
-    login Form
+    This is my Application!
   </body>
 </html>
